Update README.md
configuration