@@ -1,3 +1,15 @@
 [![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-22041afd0340ce965d47ae6ef1cefeee28c7c493a6346c4f15d667ab976d596c.svg)](https://classroom.github.com/a/TDA47i3L)
 # term-project-team44
 term-project-team44 created by GitHub Classroom
+
+
+
+to run the file in IntelliJ IDEA(macOS):
+go to: Toolbar> file> project structure> modules
+and set src as source folder
+then go to: Toolbar> file> project structure> libraries
+and import javafx library
+then, create a run configuration. customize following text for your computer and enter it as VM option:
+--module-path "[PATH TO JAVAFX LIB ON YOUR COMPUTER]" --add-modules javafx.controls,javafx.fxml --enable-native-access=javafx.graphics
+Then choose aresbase.Main to be Main class.
+The code is ready to run.
